# ordinal-classifier

./: .gitignore  README.md  pyproject.toml
ordinal_classifier/: __init__.py  cli.py  core.py  dataset_utils.py  evaluation.py  heatmaps.py  ordinal.py  transforms.py  uncertainty.py
tests/: test_cli.py  test_cli_comprehensive.py  test_core.py  test_core_comprehensive.py  test_dataset_utils.py  test_evaluation.py  test_heatmaps.py  test_heatmaps_comprehensive.py  test_integration.py  test_ordinal.py  test_transforms.py  test_uncertainty.py
